# Ambient-Expense-Compliance-Agent

./: .gitignore  Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml
artifacts/traces/: generated_traces.json
expense_agent/: agent.py  agent_runtime_app.py  config.py  fast_api_app.py
submission_frontend/: Dockerfile  README.md  main.py  pyproject.toml
submission_frontend/templates/: dashboard.html
tests/eval/: eval_config.yaml  generate_traces.py
tests/eval/datasets/: basic-dataset.json
tests/integration/: test_server_e2e.py
tests/unit/: test_security.py
