[project]
name = "submission_frontend"
version = "0.1.0"
description = "FastAPI manager dashboard for reviewing and approving reasoning engine sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.2",
    "google-adk[gcp]>=2.0.0",
    "google-cloud-aiplatform>=1.156.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

